# 1.00.10 (49888) Mar 16, 2011
> Start measuring tape in a less intuitive place, to see if that prompts students to move it
> Reworded "Restart" to "Reset"
# 1.00.09 (49854) Mar 16, 2011
> Only show the "return object" button if the object goes 12% outside of the bounds so the button doesn't flash on and off so often
Removed unused Scale strategy
Internal fixes: documentation, property refactoring, minor refactors
Fixed: Simulation crashes on startup on Mac 10.5 with Java 1.5, see #2771
Refactored teacher playback controls
# 1.00.08 (49543) Mar 6, 2011
Restore the moon near the earth and with the same relative velocity vector
Internationalized "Return Object"
# 1.00.07 (49537) Mar 5, 2011
Centered each mode in the center of momentum frame
# 1.00.06 (49535) Mar 5, 2011
Made earth the same size in sun/earth/moon mode as it is in sun/earth mode
Fixed: force vectors are too large in "intro" in sun/earth/moon mode
# 1.00.05 (49529) Mar 4, 2011
Fixed: the "to scale" tab should start in earth/satellite mode
# 1.00.04 (49527) Mar 4, 2011
# 1.00.03 (49525) Mar 4, 2011
Fixed: Path can still be used to draw
Removed confirmation dialog for reset all button
Only show arrow indicators when body is too small
Improved intro mode parameters
# 1.00.02 (49477) Mar 4, 2011
Changed cartoon sun to match up parameters with real sun
Renamed "Earth Values" to "Restart"
Removed measuring tape from intro tab
Removed cartoon scaling
Removed scaling control panel
Moved measuring tape from "scaling" panel to "show" panel
Started a new module
# 1.00.01 (49396) Mar 2, 2011
Don't add to the path if the user is dragging the body, see #2767
Reversed the initial velocity of the moon so it will orbit counterclockwise, resolves #2766
Removed unnecessary calls to setBackground
Switched to use ControlPanelNode
# 1.00.00 (48733) Feb 7, 2011
Initial deploy of 1.00
Added screenshot
Renamed from "invert colors" to "white background"
Added string for module name
# 0.0.25 (48611) Feb 3, 2011