@@ -1,6 +1,6 @@
 gravity-and-orbits.name=Gravity and Orbits
 
-intro=Intro
+cartoon=Cartoon
 toScale = To Scale
 billionBillionSpaceStationMasses=billion billion Space Station masses
 earth=Earth
